Add routes for world and refs catagorites

--- a/index.html
+++ b/index.html
@@ -6,16 +6,26 @@
 </head>
 
 <body>
-    Content goes here.
-    <p class="list">
-        <a href="/api/v1/oracle">Oracle</a>
-    </p>
+    <div class="linkContainer">
+        <p class="list">
+            <a href="/api/v1/oracle">Oracle</a>
+        </p>
+        <p class="list">
+            <a href="/api/v1/world">World</a>
+        </p>
+        <p class="list">
+            <a href="/api/v1/refs">Refs</a>
+        </p>
+    </div>
 </body>
 
 </HTML>
 <style>
-.list{
-    background-color: burlywood;
-    padding: 15px;
-}
+    .list {
+        background-color: burlywood;
+        padding: 15px;
+    }
+    .linkContainer{
+        width: 40%;
+    }
 </style>
