Add pages for different oracles

--- a/public/pages/oracle/oracleCharacter.html
+++ b/public/pages/oracle/oracleCharacter.html
@@ -2,19 +2,14 @@
 <HTML>
 
 <head>
-    <title>Journal</title>
+    <title>Journal- oracle character</title>
 </head>
 
 <body>
     <div class="linkContainer">
+       
         <p class="list">
-            <a href="/api/v1/oracle">Oracle</a>
-        </p>
-        <p class="list">
-            <a href="/api/v1/world">World</a>
-        </p>
-        <p class="list">
-            <a href="/api/v1/refs">Refs</a>
+            <a href="/api/v1/oracle/character">Character Oracle Generator</a>
         </p>
     </div>
 </body>
