Add coordinates to hexs, axial rgb

--- a/public/pages/oracle/oracleLocation.html
+++ b/public/pages/oracle/oracleLocation.html
@@ -17,7 +17,11 @@
 
         sub oracles
         Hex designation: 001!001.001 (ring!x.y)     
-        Hex name:Blah blah                       | reroll   | lock
+        Hex name:Blah blah                       | 
+        reroll   | lock
+        hexCoord r;
+        hexCoord G;
+        hexCoord B;
         Terrain type: Plains                     | reroll   | lock
             Sub hex terrain features             | reroll   | lock
             Weather:                             | reroll   | lock
